<resources>
    <string name="app_name">Unity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="images">image</string>
    <string name="aearthq_h">-: Earthquake :-</string>
    <string name="aearthq_t1">\n
        \nEarthquakes are a sudden slipping or movement of a portion of the earth’s crust, accompanied or followed by a
        series of vibrations. Earthquakes strike suddenly, violently, without warning. Earthquakes occurring in a
        populated area may cause many deaths, injuries and extensive damage to property.
        \n\nTherefore, every citizen should be aware of risks and be better prepared to respond in case of a major
        earthquake.
        \n\nWe should ask ourselves the following questions:
        \n\n• Why do earthquakes happen?
        \n\n• How can we protect ourselves?
        \n\n• What must we do to minimize the damage?
        \n\n Earthquakes cannot be predicted but we can be proactive. Earthquake protection is about a whole series of
        measures, small and big, that you can and must work on today to ensure that tomorrow is safe. The truth is
        “Earthquake do not kill, unsafe buildings do!” Loss of human lives and injuries are caused due to collapse of
        buildings. Poor design, poor construction, and poor maintenance - these are the killers.
    </string>
    <string name="aearthq_t2">
        \n\nBefore an Earthquake
        \n\nBefore an earthquake you can take some non structural mitigation measures to reduce risks, like those given
        below:
        \n\n• Make sure you have a fire extinguisher, first aid kit, a battery-powered radio, a flashlight, and extra
        batteries at home.
        \n\n• Learn first aid.
        \n\n• Learn how to turn off the gas, water, and electricity.
        \n\n• Make up a plan of where to meet your family after an earthquake.
        \n\n• Don\'t leave heavy objects on shelves (they\'ll fall during a quake).
        \n\n• Anchor heavy furniture, cupboards, and appliances to the walls or floor.
        \n\n• Learn the earthquake plan at your school or workplace
        \n\n
    </string>
    <string name="aearthq_t3">
        \n\nDuring an Earthquake
        \n\n
        \n\n• Stay calm! If you\'re indoors, stay inside. If you\'re outside, stay outside.
        \n\n• If you\'re indoors, stand against a wall near the center of the building, stand in a doorway, or crawl
        under heavy furniture (a desk or table). Stay away from windows and outside doors.
        \n\n• If you\'re outdoors, stay in the open away from power lines or anything that might fall. Stay away from
        buildings (stuff might fall off the building or the building could fall on you).
        \n\n• Don\'t use matches, candles, or any flame. Broken gas lines and fire don\'t mix.
        \n\n• If you\'re in a car, stop the car and stay inside the car until the earthquake stops.
        \n\n• Don\'t use elevators (they\'ll probably get stuck anyway).
        \n\n
    </string>
    <string name="aflood_h">-: Floods :-</string>
    <string name="aflood_t1">\n

        Floods are natural occurrences where an area or land that is normally dry abruptly becomes submerged in water.
        In simple terms, flood can be defined as an overflow of large quantities of water onto a normally dry land.
        Flooding happens in many ways due to overflow of streams, rivers, lakes or oceans or as a result of excessive
        rain.
        \n\nWhenever flooding takes place, there is the possibility of loss of life, hardship to people, and extensive
        damage to property. This is because flooding can carry bridges, cars, houses, and even people. Flooding also
        destroys crops and can wipe away trees and other important structures on land. Some floods occur abruptly and
        recede quickly whereas others take several days or even months to form and to recede because of variation in
        size, duration, and the area affected.
        \n\nCauses of Flooding
        \n\nMany conditions result in flooding. Hurricanes, clogged drainages, and rainfall are some of the conditions
        that have led to flooding in various regions across the globe. Here are the leading causes of flooding.
        \n\n1. Rain
        \n\nRain is the leading contributor to most of the flooding cases witnessed across the world. Too much rain
        causes water to flow overland contributing to flooding. In particular, it is due to high rainfall intensity over
        a prolonged period.
        \n\nDepending on the rainfall distribution, the amount of rain, and soil moisture content, short rainfall period
        can also result in flooding. Light rains for longer periods – several days or weeks, can also result in floods.
        The rain water erosive force can weaken the foundations of buildings, causing tumbles and cracks.
        \n\n2. River Overflows
        \n\nRivers or streams can overflow their banks. This happens when the river or stream holds more water upstream
        than usual, and it flows downstream to the neighboring low-lying areas, typically referred to as the
        floodplains. As a consequence, this creates a sudden discharge of water into the adjacent lands leading to
        flooding.
        \n\nDams in rivers may also at times overwhelm rivers when the carriage capacity is exceeded, causing the water
        to burst and get into the floodplains. Flood caused by river overflow has the potential of sweeping everything
        in its path downstream.
        \n\n3. Lakes and Coastal Flooding
        \n\nLake and Coastal flooding occurs when large storms or tsunamis causes the water body to surge inland. These
        overflows have destructive power since they can destroy ill-equipped structures to withstand water’s strength
        such as bridges, houses, and cars.
        \n\nIn the coastal areas, strong and massive winds and hurricanes drive water onto the dry coastal lands and
        give rise to flooding. The situation is even worsened when the winds blowing from the ocean carry rains in them.
        Sea waters from the tsunami or hurricane can cause widespread damage.
        \n\n4. Dam Breakage
        \n\nDams are man-made structures used to hold water from flowing down from a raised ground. The potential energy
        stored in the dam water is used to generate electricity. At times, the walls can become weak and break because
        of overwhelming carriage capacity. Due to this reason, breakage of the dam can cause extensive flooding in the
        adjacent areas.
        \n\nFlooding occurs when the embankments built along the sides of the river to stop high water from flowing onto
        the land breaks. Sometimes, the excess water from the dam is deliberately released from the dam to prevent it
        from breaking thereby causing floods.
        \n\n5. Melting of the Glaciers and Mountain Tops
        \n\nIn the cold regions, ice and snows build up during the winters. When the temperature rises in summer, the
        accumulated snows and ice are subjected to melting resulting in vast movements of water into lands that are
        normally dry. Regions with mountains that have ice on top of them also experience the same outcome when the
        atmospheric temperature rises. This type of flooding is usually termed as snowmelt flood.
        \n\n6. Clogged Drainages
        \n\nFlooding also takes place when snowmelt or rainfall runoff cannot be channeled appropriately into the
        drainage systems forcing the water to flow overland. Clogged or lack of proper drainage system is usually the
        cause of this type of flooding.
        \n\nThe areas remain flooded until the stormwater systems or waterways are rectified. Instances where the
        systems or water ways are not rectified, the areas remain flooded until the excess water evaporates or is
        transpired into the atmosphere by plants.


    </string>
    <string name="ahousefire_h">-: Wild Fire :-</string>
    <string name="ahousefire_t1">\n
        \n\nIn just two minutes, a fire can become life-threatening. In five minutes, a residence can be engulfed in
        flames.
        \n\nLearn About Fires
        \n\n
        \n\n Fire is FAST! In less than 30 seconds a small flame can turn into a major fire. It only takes minutes for
        thick black smoke to fill a house or for it to be engulfed in flames.
        \n\n Fire is HOT! Heat is more threatening than flames. Room temperatures in a fire can be 100 degrees at floor
        level and rise to 600 degrees at eye level. Inhaling this super-hot air will scorch your lungs and melt clothes
        to your skin.
        \n\n Fire is DARK! Fire starts bright, but quickly produces black smoke and complete darkness.
        \n\n Fire is DEADLY! Smoke and toxic gases kill more people than flames do. Fire produces poisonous gases that
        make you disoriented and drowsy. Asphyxiation is the leading cause of fire deaths, exceeding burns by a
        three-to-one ratio.
        \n\n
    </string>
    <string name="cuts_h">-: Cuts/Bandages :-</string>
    <string name="cuts_t1">\n

        1. Wash your hands. This helps avoid infection.\n\n
        2. Stop the bleeding. Minor cuts and scrapes usually stop bleeding on their own. If needed, apply gentle
        pressure with a clean bandage or cloth and elevate the wound until bleeding stops.\n\n
        3. Clean the wound. Rinse the wound with water. Keeping the wound under running tap water will reduce the risk
        of infection. Wash around the wound with soap. But don\'t get soap in the wound. And don\'t use hydrogen
        peroxide or iodine, which can be irritating. Remove any dirt or debris with a tweezers cleaned with alcohol. See
        a doctor if you can\'t remove all debris.\n\n
        4. Apply an antibiotic or petroleum jelly. Apply a thin layer of an antibiotic ointment or petroleum jelly to
        keep the surface moist and help prevent scarring. Certain ingredients in some ointments can cause a mild rash in
        some people. If a rash appears, stop using the ointment.\n\n
        5. Cover the wound. Apply a bandage, rolled gauze or gauze held in place with paper tape. Covering the wound
        keeps it clean. If the injury is just a minor scrape or scratch, leave it uncovered.\n\n
        6. Change the dressing. Do this at least once a day or whenever the bandage becomes wet or dirty.\n\n
        7. Get a tetanus shot. Get a tetanus shot if you haven\'t had one in the past five years and the wound is deep
        or dirty.\n\n
        8. Watch for signs of infection. See a doctor if you see signs of infection on the skin or near the wound, such
        as redness, increasing pain, drainage, warmth or swelling.\n\n

    </string>
</resources>