<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">


    <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/abo_h"
            android:fontFamily="@font/artifika"
            android:gravity="center_horizontal"
            android:text="@string/ahousefire_h"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" tools:targetApi="jelly_bean"/>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/head">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/images"
                    android:src="@drawable/house_fi"/>


            <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/ahousefire_t1"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="15sp"
                    android:typeface="normal"
                    tools:targetApi="jelly_bean"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>


